--- a/Menu Folder/cold.html
+++ b/Menu Folder/cold.html
@@ -17,7 +17,7 @@
                     <div id="logo">
                         <a href="index.html">
                             <div id="logo">
-                                <img src="Logo.png">
+                                <img src="/Logo.png">
                                 <span id="logo-text">VITALY TEA</span>
                             </div>
                         </a>
@@ -103,7 +103,7 @@
             <footer>
                 <div class="fcontainer">
                     <div class="fheader">
-                        <img src="Logo.png" alt="Logo">
+                        <img src="/Logo.png" alt="Logo">
                         <h3>Vitaly Tea</h3>
                     </div>
                     <div class="f1">
