--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
             <div class="content"  id="third">
                 <img src="Index Folder/pictures/service.png">
-                <p>Experience our swift and efficient service—your satisfaction is our priority. Bought to you by our very best employee, Mr. Marlo Veluz Jr.</p>
+                <p>Experience our swift and efficient service—your satisfaction is our priority.</p>
             </div>
         </div>
         </main>
